add eog video player, chromium and hyprshot

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -180,6 +180,7 @@ bind = CONTROL_SUPER_ALT, P, exec, systemctl poweroff
 bind = CONTROL_SUPER_ALT, R, exec, systemctl reboot
 bind = SHIFT_SUPER, M, exec, hyprctl keyword monitor , preferred, auto, 1, mirror, eDP-1
 bind = SHIFT_SUPER, J, exec, hyprctl keyword monitor , preferred, auto, 1
+bind = , PRINT, exec, hyprshot -m region -o ~/Pictures/Screenshots
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
