--- a/modules/nixos/rust-toolchain.toml
+++ b/modules/nixos/rust-toolchain.toml
@@ -10,7 +10,7 @@ components = [
 ]
 targets = [
   "wasm32-unknown-unknown",
-  "wasm32-wasi",
+  "wasm32-wasip1",
   "x86_64-pc-windows-gnu",
   "x86_64-unknown-linux-gnu",
   "aarch64-unknown-linux-gnu",
